# csad2526KI404HertsykMaksymAndriyovuch7

./: CMakeLists.txt  baud_gen.vhd  build_and_test.bat  main.cpp  math_operations.h  pull_req_1.md  pull_req_2  pull_req_3.md  pull_req_4.md  pull_req_5.md  pull_req_6.md  uart_rx.vhd  uart_tb.vhd  uart_top.vhd  uart_tx.vhd
.github/workflows/: ci.yml
tests/: unit_tests.cpp
